--- a/css/estilos.css
+++ b/css/estilos.css
@@ -164,9 +164,48 @@ nav a:hover {
   transition: delay 0.75s;
 }
 
+/*Sección ORIGEN*/
+
 .conteiner__mainOrigen{
   background-color: rgb(213, 140, 188);
 }
+
+.hero__origen{
+  background-image: url(../recursos/bannerseccion.jpg);
+  height: 50vh;
+  background-size: cover;
+  background-position-y: -45vh;
+}
+
+.texto__tituloOrigen {
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding-top: 120px;
+  font-size: 35px;
+  -webkit-text-stroke: 2px black;
+}
+
+.texto__subtituloOrigen {
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin-top: 50px;
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.conteiner__txtOrigen {
+  display: flex;
+  justify-content: center;
+}
+
+.texto__principalOrigen {
+  color: rgb(255, 255, 255);
+  margin-top: 50px;
+  margin-left: 20px;
+  font-size: 15px;
+}
+
+/*Sección musica*/
 
 .conteiner__mainMusica {
   background-color: rgb(213, 140, 188);
@@ -613,41 +652,6 @@ z-index: 2;
   }
 }
 
-
-.texto__tituloOrigen {
-  color: rgb(255, 255, 255);
-  text-align: center;
-  padding-top: 120px;
-  font-size: 35px;
-  -webkit-text-stroke: 2px black;
-}
-
-.texto__subtituloOrigen {
-  color: rgb(255, 255, 255);
-  text-align: center;
-  margin-top: 50px;
-  margin-left: 20px;
-  font-size: 18px;
-}
-
-.conteiner__txtOrigen {
-  display: flex;
-  justify-content: center;
-}
-
-.texto__principalOrigen {
-  color: rgb(255, 255, 255);
-  margin-top: 50px;
-  margin-left: 20px;
-  font-size: 15px;
-}
-
-.textoparahacercosas {
-  background-color: black;
-  margin-top: 10px;
-  width: 100px;
-  height: 100px;
-}
 .titulo__delFormulario {
   color: rgb(255, 255, 255);
   text-align: center;
