--- a/css/estilos.css
+++ b/css/estilos.css
@@ -193,18 +193,91 @@ nav a:hover {
   font-size: 18px;
 }
 
-.conteiner__txtOrigen {
+.container__cardsOrigen{
+  position: relative;
+  right: -9%;
+  width: 1500px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+
+.container__cardsOrigen .cardOrigen {
+  position: relative;
+  height: 250px;
+  background-color: #fff;
+  display: flex;
+  width: 45%;
+  margin: 30px 0;
+}
+
+.container__cardsOrigen .cardOrigen .imgCard {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #333;
+  z-index: 1;
   display: flex;
   justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
 }
 
-.texto__principalOrigen {
-  color: rgb(255, 255, 255);
-  margin-top: 50px;
-  margin-left: 20px;
-  font-size: 15px;
+.container__cardsOrigen .cardOrigen:hover .imgCard {
+  width: 150px;
+  height: 150px;
+  left: -75px;
+  top: calc(50% - 75px);
+  transition: 0.5s ease-in-out;
+  background: #ff0057;
 }
 
+.container__cardsOrigen .cardOrigen .imgCard:before {
+content: attr(data-text);
+position: absolute;
+bottom: 0;
+left: 0;
+width: 100%;
+height: 100%;
+text-align: center;
+font-size: 6em;
+color: rgba(255, 255, 255, .05);
+font-weight: 700;
+}
+.container__cardsOrigen .cardOrigen .imgCard img {
+  max-width: 100px;
+  transition: 0.5s ease-in-out;
+}
+
+.container__cardsOrigen .cardOrigen:hover .imgCard img {
+  max-width: 75px;
+}
+
+.container__cardsOrigen .content_Card{
+  position: absolute;
+  right: 0;
+  width: calc(100% - 75px);
+  height: 100%;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.container__cardsOrigen .cardOrigen .content_Card h3 {
+  margin-bottom: 5px;
+  font-size: 24px;
+}
+
+.container__cardsOrigen .cardOrigen .content_Card p {
+  display: inline-block;
+  margin-top: 10px;
+  margin-left: 23px;
+  padding: 1px 10px;
+}
 /*Sección musica*/
 
 .conteiner__mainMusica {
