--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,9 +38,30 @@ nav a:hover {
   color: rgb(255, 0, 212);
 }
 
+.conteinerIndex{
+  position: relative;
+  height: 100vh;
+}
+
 .video__conteiner {
-  display: flex;
-  height: 50vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -3;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.video__conteiner video {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%,-50%);
+  filter: blur(4px);
 }
 
 .contenedor__textoIndex {
@@ -50,19 +71,9 @@ nav a:hover {
   color: white;
   position: relative;
   overflow: hidden;
-  margin-top: 20vh;
+  padding-top: 250px;
   min-height: 10vh;
   text-align: center;
-}
-
-.backgroundvideo {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 50vh;
-  filter: blur(5px);
 }
 
 .titulo__index {
@@ -202,7 +213,7 @@ nav a:hover {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 20px;
+  padding: 20px;
 }
 
 .container__cardsOrigen .cardOrigen {
@@ -786,9 +797,18 @@ margin: 0 10px;
   border-radius: 3px;
 }
 
+.footer__index {
+  background-image: linear-gradient(to top, #3ef7fd, rgb(211, 201, 254));
+  height: 20vh;
+}
+
+.footer__index h3 {
+  text-align: center;
+}
+
 footer {
   background-image: linear-gradient(to top, #3ef7fd, rgb(211, 201, 254));
-  padding-top: 50px;
+  padding-top: 40px;
   height: 20vh;
 }
 
@@ -796,15 +816,6 @@ footer h3 {
   text-align: center;
 }
 
-.footer__index {
-  background-image: linear-gradient(to top, #3ef7fd, rgb(211, 201, 254));
-  margin-top: 50px;
-  height: 20vh;
-}
-
-.footer__index h3 {
-  text-align: center;
-}
 
 /* DISPOSITIVOS MEDIANOS SECCIÓN MÚSICA*/
 
