--- a/css/estilos.css
+++ b/css/estilos.css
@@ -209,11 +209,11 @@ nav a:hover {
 .container__cardsOrigen{
   position: relative;
   right: -9%;
-  width: 1500px;
+  width: 80%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 20px;
+  
 }
 
 .container__cardsOrigen .cardOrigen {
@@ -295,7 +295,8 @@ font-weight: 700;
 
 .conteiner__mainMusica {
   background-color: rgb(213, 140, 188);
-  height: 200vh;
+  height: 215vh;
+
 }
 
 .banner-hero {
@@ -315,24 +316,22 @@ font-weight: 700;
   
 }
 
-.container__albums {
-  height: 100vh;
-}
-
 /* Sección de música 3 tarjetas con texto */ 
 
 .tarjetasMusica {
   width: 100%;
-  height: 100vh;
+  height: 64vh;
+  margin-top: 2 0px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .container__albums {
-  width: 100%;
-  display: flex;
   max-width: 1230px;
+  height: 65vh;
+  display: flex;
+  margin-top: 120px;
 }
 
 .musicaTarjeta {
@@ -385,11 +384,12 @@ color: #6a6a6a;
 /* Otros albums uno al lado del otro */
  
 .seccion__fotosMusica {
-  margin: 20px;
-  padding: 0;
+  margin: 15px;
   text-align: center;
-  position: absolute;
-  top: 130vh;
+  height: 45vh;
+  position: relative;
+  top: 15%;
+  
 }
 
 .seccion__fotosMusica h1 {
@@ -404,6 +404,7 @@ color: #6a6a6a;
   grid-auto-rows: 100px 300px;
   grid-gap: 10px;
   grid-auto-flow: dense;
+  
 }
 
 .gallery-item {
