--- a/css/estilos.css
+++ b/css/estilos.css
@@ -859,6 +859,26 @@ transition: 0.3s;
 transition-property: background;
 }
 
+@media screen and (max-width: 950px){
+  .seccion__contacto{
+    flex-direction: column;
+  }
+  .contact__info .contact__form{
+    margin: 30px 50px;
+  }
+  .contact__form h2{
+    font-size: 30px;
+    margin-left: 52px;
+    margin-top: 40px;
+  }
+  .contact__form .text-box{
+    width: 100%;
+  }
+  .contact{
+    margin-left: 55px;
+  }
+}
+ 
 
 /*Footer*/
 
